styles/style.css
/* ... */
.mobile-header-menu {
    display: none;
    width: 100vw;
    height: 6rem;
    position: fixed;
    top: 0;
    z-index: 100;
}

.mobile-list {
    display: flex;
    width: 100%;
    justify-content: space-evenly;
    padding: 0;
    font-size: 2rem;
}

.header-menu {
  position: fixed;
  font-size: 2rem;
  top: 25vh;
  right: 0;
  width: 400px;
  height: 400px;
  z-index: 1;
  font-family: 'Monoton', cursive;
  animation-name: translate;
  animation-duration: 1s;
  transform: translate(80%);
}

.theme-button {
    font-family: 'Monoton', cursive;
    background-color: transparent;
    border: none;
}

.mobile-header-menu {
    font-family: 'Monoton', cursive;
}

@keyframes translate {
    0% {
        transform: translate(100%, 0);
        opacity: 0;
    }
    100% {
        transform: translate(80%, 0);
        opacity: 1;
    }
}

.my-image {
    transition: 1s ease;
    transform: translateX(100%);
    opacity: 0;
    width: 50%;
}

.my-image img {
    height: 45rem;
    border-radius: 23rem;
}

.my-image.appear {
    transform: translateX(0);
    opacity: 1;
}
  
.typewriter {
    width: 600px;
    white-space: normal;
    word-wrap: break-word;
    border-radius: 1.5rem;
    position: relative;
    top: 20vh;
    left: 10vh;
    padding: 6rem;
    height: 350px;
    font-family: 'Megrim', cursive;
    font-size: 2.5rem;
}
  
h1::after {
    content: '';
    display: inline-block;
    width: 6px;
    height: 0.8em;
    margin-left: 0.2em;
    animation: blink-caret 0.75s step-end infinite;
}

@keyframes blink-caret {
    from,
    to {
        background-color: transparent;
    }
    50% {
        background-color: rgb(238, 255, 0);
    }
}

.call-to-action {
    border-radius: 5rem;
    padding: 1rem 4rem;
    position: absolute;
    bottom: -30px;
    right: 140px;
    border: none;
}

.hamburger-menu {
    display: none;
    margin-top: 2rem;
    cursor: pointer;
    height: 100%;
    z-index: 1;
}

.hamburger-menu.is-active::after {
    transform: rotate(-45deg) translate(-9px, 1.5px);
  }
  
  .hamburger-menu.is-active::before {
    transform: rotate(45deg) translate(-6px, -0.5px);
  }

    .is-active .burger {
    opacity: 0;
  }

.burger {
    height: 0.5rem;
    width: 5rem;
    top: 2rem;
}

.burger, .hamburger-menu::before, .hamburger-menu::after {
    content: "";
    height: 0.5rem;
    width: 5rem;
    display: block;
    position: absolute;
    transition: .3s;
}

.hamburger-menu::before {
    top: 3rem;
}

.hamburger-menu::after {
    top: 1rem;
}

.open-menu {
    height: 100vh;
    transition: .4s;
    justify-content: flex-start;
}

.show-menu {
    display: flex !important;
}

  /*GENERAL STYLING*/

button {
    cursor: pointer;
    transition: 1s;
}

a {
    text-decoration: none;
    transition: 1s;
}

body {
    overflow-x: hidden;
}

body, button {
    font-family: 'Cutive Mono', monospace;
}

body, html {
    scroll-behavior: smooth;
}

h1 {
    margin: 0;
}

h2 {
    font-size: 2.5rem;
    text-align: center;
    font-family: 'Monoton', cursive;
}

h3 {
    font-size: 2.5rem;
}

p, label {
    font-size: 1.8rem;
}

.wrapper {
    max-width: 1200px;
    margin: 10rem auto;
}

.back-to-top {
    position: fixed;
    bottom: 1.5rem;
    right: 1rem;
    font-size: 3rem;
    background-color: none;
    border-radius: 10rem;
    padding: 1.5rem 2rem;
    transition: .3s;
    opacity: 0;
}

/*ABOUT*/

.about-text {
    opacity: 0;
    transition: .8s;
    display: flex;
    justify-content: center;
    padding: 3rem;
    border-radius: 1.5rem;
    height: fit-content;
    width: 50%;
}

.about-text.about-appear {
    opacity: 1;
}

.about-section {
    display: flex;
    align-items: center;
}

.tech-stack-slider {
    display: flex;
    gap: 4rem;
    margin-top: 6rem;
    animation: scroll 40s linear infinite;
    padding: 2rem;
}

.slider-container {
    overflow: hidden;
    position: relative;
    display: flex;
}

.slider-container:hover, .tech-stack-slider:hover, .tech-stack-slider img:hover {
    animation-play-state: paused;
}

.slider-container::before, .slider-container::after {
    background: linear-gradient(to right, #fff 0%, rgba(255, 255, 255, 0) 100%);
    content: "";
    height: 100%;
    position: absolute;
    width: 100px;
    z-index: 2;
}

.slider-container::after {
    right: 0;
    top: 0;
    transform: rotateZ(180deg);
    z-index: 0;
}

.slider-container::before {
    left: 0;
    top: 0;
}

@keyframes scroll {
    0% {
        transform: translateX(0%);
    }

    100% {
        transform: translateX(-60%);
    }
}

.tech {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
}

.tech-icon {
    width: 8rem;
    transition: .3s;
    filter: grayscale(100%);
}

.tech-icon + p {
    opacity: 0;
    transition: .3s;
    position: absolute;
    bottom: -2.5rem;
}

.tech-icon:hover {
    transform: translateY(-2.5rem);
    filter: grayscale(0%);
}

.tech-icon:hover + p {
    opacity: 1;
}

/*PROJECTS*/

.project-list {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 5rem;
    margin-top: 10rem;
}

.project, .tech-stack {
    height: 200px;
    overflow: hidden;
    position: relative;
    transition: .8s ease;
    border-radius: 1rem;
}

.more-details {
    position: absolute;
    top: 2rem;
    right: 2rem;
    border: none;
    font-size: 1.5rem;
    border-radius: 5rem;
    padding: 1rem 2rem;
}

iframe {
    transform: translateY(2rem);
    opacity: 0;
}

.project-1 {
    grid-column-start: 1;
    grid-column-end: 3;
    grid-row-start: 1;
    grid-row-end: 1;
    transform: translateX(-100%);
    opacity: 0;
}

.tech-stack-1 {
    grid-column-start: 3;
    grid-column-end: 4;
    grid-row-start: 1;
    grid-row-end: 1;
    transform: translateY(-100%);
    opacity: 0;
}

.project-2 {
    grid-column-start: 2;
    grid-column-end: 4;
    grid-row-start: 2;
    grid-row-end: 2;
    transform: translateX(100%);
    opacity: 0;
}
/* ... */

